Expanded to 10x10 grid with more colors and a color indicator

--- a/index.html
+++ b/index.html
@@ -13,79 +13,304 @@
 <body>
   <div class="grid-container">
 
-    <div class="border border-dark a1">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark a2">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark a3">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark a4">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark a5">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark b1">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark b2">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark b3">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark b4">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark b5">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark c1">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark c2">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark c3">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark c4">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark c5">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark d1">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark d2">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark d3">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark d4">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark d5">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark e1">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark e2">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark e3">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark e4">
+    <div class="border border-dark">
 
     </div>
-    <div class="border border-dark e5">
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
+
+    </div>
+    <div class="border border-dark">
 
     </div>
     <div class="select RED">
@@ -101,6 +326,36 @@
 
     </div>
     <div class="select BLUE">
+
+    </div>
+    <div class="select INDIGO">
+
+    </div>
+    <div class="select VIOLET">
+
+    </div>
+    <div class="select PINK">
+
+    </div>
+    <div class="select WHITE">
+
+    </div>
+    <div class="select BLACK">
+
+    </div>
+    <div class="indicator">
+
+    </div>
+    <div class="indicator">
+
+    </div>
+    <div class="indicator">
+
+    </div>
+    <div class="indicator">
+
+    </div>
+    <div class="indicator">
 
     </div>
     <div class="indicator">
